--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body id="b">
     <div id="navbar">
-        <a id="home" href="fhttps://github.com/Nithish450/Portfolio">Home</a>
+        <a id="home" href="https://github.com/Nithish450/Portfolio">Home</a>
         <a id="about" href="https://github.com/Nithish450/Portfolio2">About</a>
         <a id="skills" href="https://github.com/Nithish450/Portfolio3">Skills</a>
         <a id="projects" href="https://github.com/Nithish450/Portfolio4">Projects</a>
