--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body id="b">
     <div id="navbar">
         <a id="home" href="https://github.com/Nithish450/Portfolio/">Home</a>
-        <a id="about" href="https://github.com/Nithish450/Portfolio2/">About</a>
+        <a id="about" href="https://nithish450.github.io/Portfolio2/">About</a>
         <a id="skills" href="https://github.com/Nithish450/Portfolio3/">Skills</a>
         <a id="projects" href="https://github.com/Nithish450/Portfolio4/">Projects</a>
         <a id="certifications"  href="https://github.com/Nithish450/Portfolio5/">Certifications</a>
