--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="b">
-    <div id="navbar">
-        <a id="home" href="https://github.com/Nithish450/Portfolio/">Home</a>
+ <div id="navbar">
+        <a id="home" href="https://nithish450.github.io/Portfolio/">Home</a>
         <a id="about" href="https://nithish450.github.io/Portfolio2/">About</a>
-        <a id="skills" href="https://github.com/Nithish450/Portfolio3/">Skills</a>
-        <a id="projects" href="https://github.com/Nithish450/Portfolio4/">Projects</a>
-        <a id="certifications"  href="https://github.com/Nithish450/Portfolio5/">Certifications</a>
-        <a id="contact"  href="https://github.com/Nithish450/Portfolio6/">Contact</a>
+        <a id="skills" href="https://nithish450.github.io/Portfolio3/">Skills</a>
+        <a id="projects" href="https://nithish450.github.io/Portfolio4/">Projects</a>
+        <a id="certifications"  href="https://nithish450.github.io/Portfolio5/">Certifications</a>
+        <a id="contact"  href="https://nithish450.github.io/Portfolio6/">Contact</a>
     </div>
     <h1 id="h">About Me...</h1>
     <h1 id="p">Personal details</h1>
